--- a/test-plone-4.2.x-py2.6.cfg
+++ b/test-plone-4.2.x-py2.6.cfg
@@ -1,5 +1,7 @@
 [buildout]
-extends = https://raw.github.com/4teamwork/ftw-buildouts/master/test-plone-4.2.x.cfg
+extends =
+    https://raw.github.com/4teamwork/ftw-buildouts/master/test-plone-4.2.x.cfg
+    https://raw.github.com/4teamwork/ftw-buildouts/master/test-versions.cfg
 
 package-name = errbit
 jenkins_python = $PYTHON26
