Plone 4.2 tests: pin down Pillow in order to fix tests.

--- a/test-plone-4.2.x-py2.6.cfg
+++ b/test-plone-4.2.x-py2.6.cfg
@@ -5,3 +5,7 @@ extends =
 
 package-name = errbit
 jenkins_python = $PYTHON26
+
+[versions]
+# Pillow 4.x does no longer support Python 2.6.
+Pillow = <4
